# rust_web_loader

./: Cargo.toml  Dockerfile  config.json
src/: config.rs  main.rs  ui.rs
