[package]
name = "untitled"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0.204", features = ["derive"] }
log = "0.4.22"
chrono = "0.4.38"
env_logger = "0.11.5"
ratatui = "0.28.1"
num_cpus = "1.0"
circular-buffer = "0.1.7"